@@ -89,36 +89,76 @@
         <plugins>
 
             <!-- Run *IT.java tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M5</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
+                    <!-- ADD THIS: Surefire for *Test.java files -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.0.0-M5</version>
                         <configuration>
-                            <includes>
-                                <include>**/*IT.java</include>
-                                <include>**/*IntegrationTest.java</include>
-                            </includes>
+                            <!-- Force kill after 30 seconds if hung -->
+                            <forkedProcessTimeoutInSeconds>30</forkedProcessTimeoutInSeconds>
 
-                            <!-- MOVE THE MEMORY SETTINGS HERE -->
-                            <argLine>-Xmx8g -Xss4m -XX:+CrashOnOutOfMemoryError -XX:+EnableDynamicAgentLoading</argLine>
-
-                            <reuseForks>false</reuseForks>
+                            <!-- Don't reuse JVM to prevent resource leaks -->
                             <forkCount>1</forkCount>
+                            <reuseForks>false</reuseForks>
 
+                            <!-- Exit cleanly -->
+                            <shutdown>exit</shutdown>
+
+                            <!-- Memory settings -->
+                            <argLine>
+                                -Xmx8g
+                                -Xss4m
+                                -XX:+CrashOnOutOfMemoryError
+                            </argLine>
+
+                            <!-- System properties -->
                             <systemPropertyVariables>
                                 <test.env>true</test.env>
-                                <rocksdb.stats>true</rocksdb.stats>
+                                <rocksdb.stats>false</rocksdb.stats>
                             </systemPropertyVariables>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+                    </plugin>
+
+                    <!-- KEEP THIS: Failsafe for *IT.java tests -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>3.0.0-M5</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                                <configuration>
+                                    <includes>
+                                        <include>**/*IT.java</include>
+                                        <include>**/*IntegrationTest.java</include>
+                                    </includes>
+
+                                    <forkCount>1</forkCount>
+                                    <reuseForks>false</reuseForks>
+                                    <parallel>none</parallel>
+                                    <useUnlimitedThreads>false</useUnlimitedThreads>
+
+                                    <forkedProcessExitTimeoutInSeconds>20</forkedProcessExitTimeoutInSeconds>
+                                    <shutdown>exit</shutdown>
+
+                                    <argLine>
+                                        -Xmx8g
+                                        -Xss4m
+                                        -XX:+CrashOnOutOfMemoryError
+                                    </argLine>
+
+                                    <systemPropertyVariables>
+                                        <test.env>true</test.env>
+                                        <rocksdb.stats>false</rocksdb.stats>
+                                    </systemPropertyVariables>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
 
         </plugins>
     </build>
